Fix the incoherence in instruction implementations. Separate pseudo instruction txt files into appropriate registry categories.